Fixede vertical align

--- a/src/main/resources/static/css.css
+++ b/src/main/resources/static/css.css
@@ -1,13 +1,18 @@
 
 html, body {
     height:100%;
-    margin: 8px;
+
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
+}
+
+footer div {
+    margin: 0px;
+
 }
 
 footer {
